--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Leon Template One</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/css/style.css">
         <!-- Render All Elements Normally -->
         <link rel="stylesheet" href="../assets/css/normalize.css">
